--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -220,7 +220,7 @@
             </div>
             <nav>
                 <p class="logo">
-                    <a href="index.html">oglinzi<span class="biz">.biz</span></a>
+                    <a href="/">oglinzi<span class="biz">.biz</span></a>
                     <span onclick="openNav(80)" class="burger"><i class="fas fa-bars"></i></span>
                 </p>
                 <div>
@@ -249,7 +249,7 @@
                         <span>RO</span>
                         <div class="dropdown-content">
                             <p><a href="/">RO</a></p>
-                            <p><a href="indexrus.html">RU</a></p>
+                            <p><a href="#">RU</a></p>
                         </div>
                     </div>
                 </div>
@@ -449,7 +449,7 @@
             <div>
                 <div>
                     <p class="logo2">
-                        <a href="index.html">oglinzi<span class="biz">.biz</span></a>
+                        <a href="/">oglinzi<span class="biz">.biz</span></a>
                     </p>
                     <p class="footer-text">
                         Oglinzi LED la comanda si in stoc. Livrare si instalare Chisinau . Livram toata Moldova si
