--- a/views/shop/contacte.hbs
+++ b/views/shop/contacte.hbs
@@ -53,6 +53,10 @@
         width: 93%;
         height: auto;
     }
+
+    ::placeholder {
+        color: black !important;
+    }
 </style>
 <title>Oglinzi.biz</title>
 <div class="not-available-error">
@@ -98,8 +102,8 @@
             <div class="dropdown">
                 <span>RO</span>
                 <div class="dropdown-content">
-                    <p><a href="index.html">RO</a></p>
-                    <p><a href="indexrus.html">RU</a></p>
+                    <p><a href="/">RO</a></p>
+                    <p><a href="#">RU</a></p>
                 </div>
             </div>
         </div>
@@ -158,21 +162,23 @@
 </section>
 
 <footer>
-
     <div>
         <div>
-            <p class="logo2"><a href="index.html">oglinzi<span class="biz">.biz</span></a></p>
+            <p class="logo2">
+                <a href="/">oglinzi<span class="biz">.biz</span></a>
+            </p>
             <p class="footer-text">
-                Oglinzi LED la comanda si in stoc. Livrare si instalare Chisinau . Livram toata Moldova si Romania Cu
+                Oglinzi LED la comanda si in stoc. Livrare si instalare Chisinau . Livram toata Moldova si
+                Romania Cu
                 senzor de aprindere garanție 1 an. Dimensiuni la comanda
             </p>
         </div>
         <div>
             <ul class="nav-list2">
-                <li><a href="index.html">Acasa</a></li>
-                <li><a href="oglinzi.html">Oglinzi</a></li>
-                <li><a href="index.html#despre">Despre noi</a></li>
-                <li><a href="contacte.html">Contacte</a></li>
+                <li><a href="/">Acasa</a></li>
+                <li><a href="/products/1">Oglinzi</a></li>
+                <li><a href="/#despre">Despre noi</a></li>
+                <li><a href="/contacts">Contacte</a></li>
             </ul>
         </div>
         <div class="third-column">
@@ -182,27 +188,27 @@
             <p class="footer-subtitle">
                 +373 603 77771
             </p>
-            <br>
+            <br />
             <p class="footer-title">
                 Email
             </p>
             <p class="footer-subtitle">
                 oglinzibiz@gmail.com
             </p>
-            <br>
+            <br />
             <p class="footer-title">
                 Oficiu
             </p>
             <p class="footer-subtitle">
-                Chisinau, <br> str Tudor Vladimirescu 3
+                Chisinau, <br /> str Tudor Vladimirescu 3
             </p>
-            <br>
-            <a href=""><img width="36" height="36" src="assets/img/facebook.svg" alt="error"></a>
-            <a href=""><img class="instagram" width="35" height="35" src="assets/img/instagram2.svg" alt="error"></a>
+            <br />
+            <a href=""><img width="36" height="36" src="assets/img/facebook.svg" alt="error" /></a>
+            <a href=""><img class="instagram" width="35" height="35" src="assets/img/instagram2.svg" alt="error" /></a>
         </div>
     </div>
     <div class="footer-stick-container">
-        <hr class="footer-stick">
+        <hr class="footer-stick" />
     </div>
     <p class="copyright">
         Copyright © 2019, Oglinzi.biz. All Rights Reserved.
