--- a/views/shop/product_template_overview.hbs
+++ b/views/shop/product_template_overview.hbs
@@ -96,7 +96,7 @@
                 <span>RO</span>
                 <div class="dropdown-content">
                     <p><a href="/">RO</a></p>
-                    <p><a href="indexrus.html">RU</a></p>
+                    <p><a href="#">RU</a></p>
                 </div>
             </div>
         </div>
@@ -182,9 +182,12 @@
 <footer>
     <div>
         <div>
-            <p class="logo2"><a href="/">oglinzi<span class="biz">.biz</span></a></p>
+            <p class="logo2">
+                <a href="/">oglinzi<span class="biz">.biz</span></a>
+            </p>
             <p class="footer-text">
-                Oglinzi LED la comanda si in stoc. Livrare si instalare Chisinau . Livram toata Moldova si Romania Cu
+                Oglinzi LED la comanda si in stoc. Livrare si instalare Chisinau . Livram toata Moldova si
+                Romania Cu
                 senzor de aprindere garanție 1 an. Dimensiuni la comanda
             </p>
         </div>
@@ -203,27 +206,27 @@
             <p class="footer-subtitle">
                 +373 603 77771
             </p>
-            <br>
+            <br />
             <p class="footer-title">
                 Email
             </p>
             <p class="footer-subtitle">
                 oglinzibiz@gmail.com
             </p>
-            <br>
+            <br />
             <p class="footer-title">
                 Oficiu
             </p>
             <p class="footer-subtitle">
-                Chisinau, <br> str Tudor Vladimirescu 3
+                Chisinau, <br /> str Tudor Vladimirescu 3
             </p>
-            <br>
-            <a href=""><img width="36" height="36" src="assets/img/facebook.svg" alt="error"></a>
-            <a href=""><img class="instagram" width="35" height="35" src="assets/img/instagram2.svg" alt="error"></a>
+            <br />
+            <a href=""><img width="36" height="36" src="assets/img/facebook.svg" alt="error" /></a>
+            <a href=""><img class="instagram" width="35" height="35" src="assets/img/instagram2.svg" alt="error" /></a>
         </div>
     </div>
     <div class="footer-stick-container">
-        <hr class="footer-stick">
+        <hr class="footer-stick" />
     </div>
     <p class="copyright">
         Copyright © 2019, Oglinzi.biz. All Rights Reserved.
